# simrs

./: Cargo.toml  LICENSE
examples/: mm1.rs  mmc.rs  queueing_sanity.rs  warehouse_scenarios.rs  warehouse_stress.rs
src/: lib.rs  py.rs
src/core/: event.rs  event_set.rs  mod.rs  rng.rs  simulation.rs  time.rs
src/math/: doe.rs  mod.rs  optimization.rs  queueing.rs  ranking_selection.rs  risk.rs  statistics.rs
src/or/: export.rs  mod.rs  monitors.rs  replication.rs  results.rs  statistics.rs  warmup.rs
src/primitives/: context.rs  interrupt.rs  mod.rs  process.rs  resource.rs  store.rs
tests/: queueing_regression.rs
